# gotools

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: README.md  hprc.example.expected.bed  hprc.example.maf  small.expected.bed  small.expected.conserved.bed
manuscript/scripts/: ExtFigure2_addpro.py  Figure2_ccre_har_haqer_fix.py  Figure2_ccre_har_haqer_fix_overlap.R  Figure3_HumMTG.R  Figure3_HumMTG_DE.R  Figure4_gene_enrich.py  Figure4_gprofiler_heatmap.py
src/gotools/: __init__.py  addpro.py  go2fix.py  go2var.py
tests/: test_addpro.py  test_go2fix.py  test_go2var.py
tests/fixtures/: small.gtf  small.maf  small_config.json
